# tts_server

./: .gitignore  Cargo.toml  README.md  build_docker_images.sh
chinese-number/: Cargo.toml
chinese-number/chinese-variant/: Cargo.toml
chinese-number/chinese-variant/src/: lib.rs
chinese-number/enum-ordinalize/: Cargo.toml
chinese-number/src/: chinese_characters.rs  chinese_count_method.rs  lib.rs
chinese-number/src/number_to_chinese/: functions.rs  naive.rs
config/: tts.yaml
demo/: account.html  index.html
docker/: dockerfile  dockerfile.nobuild
docker/deploy/: docker-compose.yml
pinyin-translator/dict/: chars.csv  words.csv
pinyin-translator/src/: lib.rs  vars.rs
records/: query.json
tflite-rs/: .gitignore  Cargo.toml  build.rs
tflite-rs/csrc/: stl_wrapper.hpp
tflite-rs/src/: bindings.rs  lib.rs
tflite-rs/src/interpreter/: builder.rs  mod.rs
tflite-rs/src/model/: mod.rs
tflite-rs/src/model/stl/: memory_impl.rs  mod.rs  vector_impl.rs
tflite-rs/submodules/: grab.py
tts_server/: Cargo.toml
tts_server/src/: error.rs  lib.rs  main.rs
tts_server/src/base/: configuration.rs  mod.rs  record.rs  trace.rs
tts_server/src/tts/: mod.rs  server.rs
tts_server/src/tts/api/: index.rs  mod.rs  tts_handler.rs
tts_server/src/tts/engine/: baker.rs  cn_tn.rs  ljspeech.rs  mod.rs  tts_engine.rs
