[package]
name = "tts_server"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.24"
anyhow = "1.0.69"
rayon = "1.0"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1"
serde_yaml = "0.9.21"
actix = "0.13.0"
actix-web = "4.3.0"
actix-files = "0.6"
actix-cors = "0.7.0"
actix-web-actors = "4.2.0"
time = { version = "0.3.36", features = ["macros"] }
clap = { version = "4.5.15", features = ["derive"] }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "time",
    "local-time",
] }
tracing = "0.1.37"
regex = "1.9.5"
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
tflite = { path = "../tflite-rs", package = "tflite", features = ["generate_model_apis"] }
ndarray = "0.16.0"
lazy_static = "1"
pinyin = "0.10"
unicode-normalization = "0.1"
hound = "3"
chinese-number = { path = "../chinese-number", package = "chinese-number" }
chrono = "0.4"
prettytable = "0.10"
rubato = "0.15.0"
pinyin-translator = { path = "../pinyin-translator", package = "pinyin-translator" }
